<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.musicalstructureapp.TopChartsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Activity_Description"/>

        <TextView
            style="@style/SongOptionStyle"
            android:id="@+id/MusicOption1"
            android:text="@string/Song1" />

        <TextView
            style="@style/SongOptionStyle"
            android:id="@+id/MusicOption2"
            android:text="@string/Song2" />

    </LinearLayout>
</ScrollView>
